--- a/about.css
+++ b/about.css
@@ -55,12 +55,7 @@ p {
     font-size: 25px;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-}
+
 /* Additional styles for the About page */
 body {
     font-family: Arial, sans-serif;
@@ -78,3 +73,12 @@ body {
     width: 250px; /* Set the width of the logo */
     height: auto; /* Maintain aspect ratio */
 }
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
