--- a/products.css
+++ b/products.css
@@ -26,6 +26,9 @@ body {
   h1{
     text-align: center;
   }
+  h2{
+    color: black;
+  }
 
   body {
     font-family: Arial, sans-serif;
@@ -74,4 +77,170 @@ body {
 .product .description {
     font-size: 1em;
     color: #333;
+}
+.product {
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.product:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.headline-card {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 20px auto;
+  width: 80%;
+  max-width: 600px;
+  text-align: center;
+  color: #333;
+}
+
+.headline-card h1 {
+  margin: 0;
+  font-size: 2em;
+  color: #333;
+}
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+
+/*  ///// */
+
+
+
+.hero {
+  background-image: url('image/foodplate.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+}
+
+.hero-text {
+  max-width: 600px;
+  color: #ffffff;
+}
+
+.hero .btn {
+  background-color: #ff5a5f;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.about, .collection, .contact {
+  max-width: 1200px;
+  margin: 50px auto;
+  padding: 0 20px;
+  text-align: center;
+}
+
+.gallery {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+
+.gallery-item {
+  background: #fff;
+  padding: 50px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+.contact form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.contact input, .contact textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.contact .btn {
+  background-color: #ff5a5f;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
+
+
+
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+header {
+  position: relative;
+}
+
+
+
+.product-image-button {
+  position: relative;
+  padding: 10px; 
+  background-color: #f0f0f0; 
+  border: 1px solid #ccc; 
+  border-radius: 5px; 
+  cursor: pointer; 
+  display: inline-block; 
+  margin-left: 30px;
+  margin-top: 20px;
+}
+
+
+.product-image-button img {
+  width: 28px; 
+  height: 28px; 
+  vertical-align: middle; 
+  margin-right: 10px; 
+}
+
+.product-image-button:hover {
+  background-color: #e0e0e0; 
+}
+
+
+.product-image-button .cart-number {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background-color: red;
+  color: white;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 12px;
+  line-height: 16px;
 }
