--- a/signupLogin.css
+++ b/signupLogin.css
@@ -252,3 +252,13 @@ body, html {
   .mrgn-30-top {
       margin-top: 30px
   }
+
+  footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
